--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="ru" xml:lang="ru">
 	<head>
 		<title>Barber Shop Motherfucker</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,9 +18,13 @@
 		<![endif]-->	
 		<!--======================================== -->
 		<script src="jquery.simplecolorpicker.js"></script>
-
 		<link rel="stylesheet" href="jquery.simplecolorpicker.css">
 		<!--===================simplepicker=============== -->
+
+		<!--======================================== -->
+		<script src="/build/jquery.datetimepicker.full.min.js"></script>
+		<link rel="stylesheet" href="/jquery.datetimepicker.css">
+		<!--===================datetime-picker=============== -->
 	</head>
 	<body>
 		<div class="container">
