--- a/views/showusers.erb
+++ b/views/showusers.erb
@@ -1,17 +1,39 @@
 
+ <%if @password != 'admin' then %>
 
+<form class="form-inline" action="/showusers" method="POST">
+  <div class="form-group">
+    <label for="exampleInputName2">Login</label>
+    <input type="text" name='nameadmin' class="form-control" id="inputname" placeholder="admin">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputEmail2">Password</label>
+    <input type="password" name='passadmin' class="form-control" id="inputpassword" >
+  </div>
+  <button type="submit" class="btn btn-default">Войти</button>
+</form>
+<% end %>
+<p></p></br>
 <table class="table table-condensed">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>Имя</th>
-          <th>Телефон</th>
-          <th>Дата</th>
-          <th>Парикмахер</th>
-          <th>Цвет</th>
-        </tr>
-      </thead>
-      <tbody>
-        <%= @tabledb %>
-      </tbody>
-    </table>
+  <thead>
+    <tr>
+      <th>#</th>
+      <th>Имя</th>
+      <th>Телефон</th>
+      <th>Дата</th>
+      <th>Парикмахер</th>
+      <th>Цвет</th>
+    </tr>
+  </thead>
+  <tbody>
+    <%= @tabledb %>
+  </tbody>
+</table>
+
+				
+
+
+
+
+			     
+
