--- a/views/showusers.erb
+++ b/views/showusers.erb
@@ -1,18 +1,16 @@
 
- <%if @password != 'admin' then %>
+ 
+<div class="form-group alert alert-primary">
 
-<form class="form-inline" action="/showusers" method="POST">
-  <div class="form-group">
-    <label for="exampleInputName2">Login</label>
-    <input type="text" name='nameadmin' class="form-control" id="inputname" placeholder="admin">
+              <form class="form-inline" action="/showusers" method="POST"  role="form">
+              <div class="form-group">
+    <input type="barbername" name="newbarber" class="form-control"  placeholder="Введите имя нового парекмахера">
   </div>
-  <div class="form-group">
-    <label for="exampleInputEmail2">Password</label>
-    <input type="password" name='passadmin' class="form-control" id="inputpassword" >
-  </div>
-  <button type="submit" class="btn btn-default">Войти</button>
-</form>
-<% end %>
+  
+  <button type="submit" class="btn btn-default">Записать</button>
+              </form>
+              </div>
+
 <p></p></br>
 <table class="table table-condensed">
   <thead>
