--- a/views/layout.erb
+++ b/views/layout.erb
@@ -45,7 +45,7 @@
 			      <li><a href="/about">О нас</a></li>
 			      <li><a href="/visit">Записаться</a></li>
 			      <li><a href="/contacts">Контакты</a></li>
-			      <li><a href="/showusers">Войти</a></li>
+			      <li><a href="/showusers">Список заявок</a></li>
 			    </ul>
 			  </div><!--/.nav-collapse -->
 			</nav>
