change table showusers

--- a/views/showusers.erb
+++ b/views/showusers.erb
@@ -12,7 +12,7 @@
               </div>
 
 <p></p></br>
-<table class="table table-condensed">
+<table class="table table-condensed table-striped">
   <thead>
     <tr>
       <th>Имя</th>
