--- a/views/visit.erb
+++ b/views/visit.erb
@@ -21,8 +21,8 @@
   <div class="form-grup">
 		  <label>Выберите парикмахера</label>
 		  <select class="form-control" id="barbername" name="barber" >
-		  <% @resultbarber.each do |row| %>
-          <option><%= row['name'] %></option>
+		  <% @barbers.each do |item| %>
+        <option <%= @barber == item['name'] ? 'selected' : '' %>><%= item['name'] %></option>
       <% end %>
 		  </select>
 </div>	
